--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling>=1.24"]
 build-backend = "hatchling.build"
 
 [project]
-name = "s3-client"
+name = "s3_client"
 version = "0.1.0"
 description = "Tiny S3 helper with unique-key uploads."
 readme = "README.md"
