--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,12 @@
 [build-system]
-requires = ["hatchling>=1.24"]
-build-backend = "hatchling.build"
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "s3_client"
-version = "0.1.0"
-description = "Tiny S3 helper with unique-key uploads."
-readme = "README.md"
+version = "0.1.1"
 requires-python = ">=3.9"
-license = { text = "MIT" }
-authors = [{ name = "William Anderson" }]
-dependencies = [
-  "boto3>=1.34,<2",
-]
+dependencies = ["boto3"]
 
-[project.urls]
-Homepage = "https://example.com"
-
-[tool.hatch.build.targets.wheel]
-packages = ["src/s3_client"]
-
-[tool.pytest.ini_options]
-pythonpath = ["src"]
-addopts = "-q"
+[tool.setuptools]
+py-modules = ["s3_client"]
